Начал реализовывать вывод все сообщений у определенной метки

--- a/templates/map/info-module.html
+++ b/templates/map/info-module.html
@@ -37,12 +37,14 @@
 
 
 
-                <div class="boxes">
-                    <input id="adding-post" data-modal="#modal1" type="submit" value="Добавить отзыв" class="btn btn-primary" style="float: right;">
-                    <h1>Отзыв</h1>
-                    <p>Комментарий отзыва</p>
+                <div class="boxes" style="text-align: right">
+                    <input id="adding-post" data-modal="#modal1" type="submit" value="Добавить отзыв" class="btn btn-primary">
                 </div>
 
+
+                <div class="boxes" id="target">
+
+                </div>
             </aside>
 
         </div>
