Реализовал вывод комментариев через вложенный ajax, необходима доработка в виде чистки отрисованных комментов и проктрутки вниз для просомтра всех компонентов

--- a/templates/map/info-module.html
+++ b/templates/map/info-module.html
@@ -18,7 +18,7 @@
             <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
                 <div class = "border-style-right"></div>
                 <div class = "border-style-left"></div>
-                <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
+                <a class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
                 <aside id="colorlib-aside" role="complementary" class="js-fullheight">
 
 
@@ -42,7 +42,7 @@
                 </div>
 
 
-                <div class="boxes" id="target">
+                <div id="target">
 
                 </div>
             </aside>
