--- a/templates/map/info-module.html
+++ b/templates/map/info-module.html
@@ -15,7 +15,7 @@
             <div class="pointer info-section-open" id = "section-info">
                 <img src="{% static "pictures/pointer.svg" %}" class="image-pointer">
             </div>
-            <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
+            <aside id="colorlib-section-info" role="complementary" class="js-fullheight" style="overflow : auto">
                 <div class = "border-style-right"></div>
                 <div class = "border-style-left"></div>
                 <a class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
