--- a/templates/adding-mark/adding-mark.html
+++ b/templates/adding-mark/adding-mark.html
@@ -1,18 +1,25 @@
 {% extends "comment/comment.html" %}
 {% load static %}
 {% block adding-mark %}
-<div class="content">
-    <form method="post" class="p-3 p-md-5 bg-light">
-        {% csrf_token %}
-        <fieldset>
+<div class="overlay" id="modal3">
+    <div class="modal1" id="modal4">
 
-      {{ form_mark }}
+    <img src="{% static "pictures/X-mark.svg" %}" style="float:right" id="Layer_1">
 
-      <div class="form-group">
-        <input id="submit" type="submit" value="Добавить комментарий" class="btn py-3 px-4 btn-primary">
-      </div>
-        </fieldset>
-    </form>
-    <a class="btn close-modal" data-modal="#modal1" href="#">Спасибо за новый контент</a>
+    <div class="content">
+        <form method="post" class="p-3 p-md-5 bg-light">
+            {% csrf_token %}
+            <fieldset>
+
+          {{ form_mark }}
+
+          <div class="form-group">
+            <input id="submit" type="submit" value="Добавить комментарий" class="btn py-3 px-4 btn-primary">
+          </div>
+            </fieldset>
+        </form>
+        <a class="btn close-modal" data-modal="#modal1" href="#">Спасибо за новый контент</a>
+    </div>
+    </div>
 </div>
 {% endblock adding-mark %}
